filter ads feature

--- a/ads/templates/ads/layout.html
+++ b/ads/templates/ads/layout.html
@@ -16,6 +16,11 @@
     </head>
 
     <body>
+        <nav class="nav">
+            <a href="{% url 'index' %}">Home</a>
+            <a href="{% url 'filtered' %}">Filter</a>
+        </nav>
+
         {% block body %}
         {% endblock %}
 
