--- a/ads/templates/ads/form.html
+++ b/ads/templates/ads/form.html
@@ -3,8 +3,8 @@
 {% block title %}Filter form{% endblock %}
 
 {% block body %}
-    <main class="home-wrapper">
-        <h2 class="main-header">Filter form</h2>
+    <div class="home-wrapper">
+        <h2 class="divmain-header">Filter form</h2>
         <form class="filter-form" action="{% url 'filtered' %}" method="POST">
             {% csrf_token %}
             <input class="title-input form-control" type="text" name="title" placeholder="Title" />
@@ -17,7 +17,7 @@
             </select>
             <input class="submit-btn btn btn-primary" type="submit" value="Submit" />
         </form>
-    </main>
+    </div>
 
 {% endblock %}
 
