--- a/ads/templates/ads/layout.html
+++ b/ads/templates/ads/layout.html
@@ -32,7 +32,7 @@
         <footer class="footer-wrapper bg-dark">
             <div class="footer-info-wrapper">
                 <h5 class="footer-info">Made by <a class="footer-link" href="https://joselws.github.io/" target="_blank">Jose Wilhelm</a></h5>
-                <a class="footer-info footer-link" target="_blank" href="https://github.com/joselws/commerce">Source code</a>
+                <a class="footer-info footer-link" target="_blank" href="https://github.com/joselws/anuncioneon">Source code</a>
             </div>
 
             <div class="social-links-wrapper">
