--- a/ads/templates/ads/layout.html
+++ b/ads/templates/ads/layout.html
@@ -16,7 +16,7 @@
     </head>
 
     <body>
-        <nav class="nav">
+        <nav class="nav bg-dark">
             <a class="nav-link" href="{% url 'index' %}">Home</a>
             <a class="nav-link" href="{% url 'filtered' %}">Filter</a>
             {% if user.is_authenticated %}
